--- a/style.css
+++ b/style.css
@@ -56,10 +56,13 @@ header nav > ul > li {
     align-items: center;
     list-style: none;
     margin-left: 72px;
+    position: relative;
+    height: calc(100% + 1px);
 }
 
 header nav > ul > li:hover {
     border-bottom: 1px solid #ffffff;
+    border-top: 1px solid transparent;
     cursor: pointer;
 }
 
